[FIX] JIRA GSDK_SE-1353 button overlap the setting text [GearUI]

--- a/standalone/demos/GearWinsetTest/css/style.css
+++ b/standalone/demos/GearWinsetTest/css/style.css
@@ -81,6 +81,9 @@
 }
 /* ------------------------------------------------------------------------------ */
 /* -----------------------------------  NEXT DEPTH------------------------------------ */
+.ui-listview li.li-has-next-depth .li-text-sub{
+        padding-right: 20px;
+}
 .ui-listview li.li-has-next-depth a,
 .ui-listview li.li-has-next-depth.disabled {
     background-repeat: no-repeat;
